--- a/Web/023/index.html
+++ b/Web/023/index.html
@@ -21,11 +21,11 @@
 			<h2>小情书</h2>
 			<div class="bb_text">
 				<div id="code">
-					宝贝有人说爱情可以让人失去生命，但我不会。我要留着这条命为你擦去嘴角的面渣；我要留着这条命去买你喜欢的玫瑰花；我要留着这条命拂去你眼角的泪水；我要留着这条命去撑起你的快乐天堂；如果有一天你找到了心中的他，我会爬上山崖，为你去摘那朵你心中的花！我想和你一起过平淡的生活......清晨可以看到你的笑脸和餐桌上的牛奶煎蛋，然后一起出门，很努力地工作，下班去超市买菜，一起回家做晚饭，夕阳下牵手散步......一直到老...
+					亲爱的，生日快乐！在这个特别的日子里，我想对你说：你的笑容是我每天的阳光，你的陪伴是我最大的幸福。愿你的每一个愿望都能实现，每一个梦想都能成真。愿你的每一天都充满爱、快乐和惊喜。感谢你出现在我的生命里，给我带来了无尽的温暖和力量。让我们携手走过每一个春夏秋冬，共同创造更多美好的回忆。愿你的生日快乐，愿你的未来更加精彩！
 				</div>
 			</div>
 			<p class="bb_myname">
-				小孙同学<br>
+				郭亚行<br>
 			</p>
 
 		</div>
